# app/blueprints/parts/routes.py
@@ -49,7 +49,7 @@ def update_part(part_id):
     
     # if no part return message to user display
     if part == None: 
-        return jsonify({"message": "Part not found"}), 404
+        return jsonify({"message": "Part not found"}), 400
 
     try: 
         part_data = part_schema.load(request.json) # validate part data with schema
@@ -72,4 +72,4 @@ def delete_part(part_id):
         db.session.delete(part) # detele part from database
         db.session.commit() # commit changes to database
         return jsonify({"message": f"Succesfully deleted part {part_id}"}), 200
-    return jsonify({"message": "Part not found"}), 404
+    return jsonify({"message": "Part not found"}), 400
